--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = postgresql://postgres:admin@localhost:5440/render
+DATABASE_URL=postgresql://postgres:admin@host.docker.internal:5440/render?sslmode=disable
 PORT=5000
